<?xml version="1.0"?>
<package>
  <name>SDL_image</name>
  <version>2.0.0</version>
  <description>
  ROS port of the SDL_image library, configured for the catkin build system.
  </description>

  <maintainer email="James_Kuczynski@student.uml.edu">James Kuczynski</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>SDL2</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>SDL2</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
